[tool.poetry]
name = "repl_python3_AssistBot"
version = "0.1.0"
description = ""
authors = ["gramos0211 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
replit = "^3.2.4"
ffmpeg = "^1.4"
PyNaCl = "^1.4.0"
google-auth-oauthlib = "^0.4.6"
google-api-python-client = "^2.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
